# ProactiveAgent

./: .gitignore  .gitmodules  README.md  README_ja.md  README_zh.md  example_config.toml  pyproject.toml  requirements.txt
agent/: ActiveAgent.py  README.md  README_ja.md  README_zh.md  __init__.py  agentmodule.py  channels.py  components.py  config.yaml  constant.py  datamodel.py  main.py  prompt.py  ragent.py  register_hkey_aumid.py  requirements-mac.txt  requirements.txt
agent/register/: exceptions.py  label.py  register.py  wrapper.py
dataset/: README.md  README_ja.md  README_zh.md  build_agent_trainset.py  build_reward_trainset.py  build_scenes.py  calculate_human_agreement.py  new_scenes.yaml  new_scenes_good.yaml  run_datagen.py  scenes.yaml  seedtask.yaml
dataset/agent_data/: README.md
dataset/annotation/: convert_annotations.py  main.py  style.css
dataset/reward_data/: test_data.jsonl  train_data.jsonl
dataset/test_data/: code_11.json  code_12.json  code_13.json  code_14.json  code_15.json  code_16.json  splits.json  writing_11.json  writing_12.json  writing_13.json  writing_14.json  writing_15.json  writing_16.json
envs/aw-watcher-agent/: aw_tools.py  main.py
eval/: README.md  README_ja.md  README_zh.md  calculate.sh  calculate_agent_performance.py  judge_agent_prediction.py  judge_result.sh  merge.ipynb  reward_model_scoring.py  reward_model_template.py  script.py
eval/results/: activeagent.csv  activellama.csv  activenoagent.csv  activeqwen.csv  (+12 more)
gym/: README.md  README_ja.md  README_zh.md  channel.py  config.py  example.yaml  main.py
(+14 files in other folders)
